--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,9 @@
     "bootstrap": "^5.1.3",
     "nodemon": "^1.3.3",
     "react": "^18.1.0",
-    "react-bootstrap": "^2.3.1",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
